--- a/views/compras.html
+++ b/views/compras.html
@@ -68,28 +68,37 @@
 
     <main>
         <section class="main-title">
-            <h3 class="create-account">MIS COMPRAS</h3>
-            <div class="style-bar1"></div>
-        </section>
-        <section class="main-title">
-            <h3 class="create-account">PRODUCTOS</h3>
+            <h3 class="create-account">MI COMPRA</h3>
             <div class="style-bar1"></div>
         </section>
 
         <section class="contenedor">
             <article class="producto-compra">
                 <img class="foto-producto-compra" src="img/interior/Screenshot_10.png" alt="foto-producto-compra">
+                <p class="nombre-producto">NOMBRE DEL PRODICTO</p>
             </article>
-            <p class="nombre-producto">NOMBRE DEL PRODICTO</p>
 
-            <p class="precio-unitario">PRECIO UNITARIO</p>
-            <p class="cantidad">CANTIDAD</p>
+            <div>
+                <p class="precio-unitario">PRECIO UNITARIO</p>
+                <p class="precio">$2300</p>
+            </div>
+            <div>
+                <p class="cantidad">CANTIDAD</p>
+                <p class="cantidadU">1</p>
+            </div>
 
             <section>
                 <div class="resumen-compra">
                     <p>RESUMEN DE COMPRA</p>
-                    <P>SUBTOTAL</P>
-                    <P>TOTAL</P>
+                    <div class="style-bar1"></div>
+                    <div>
+                        <P class="subtotal">SUBTOTAL</P>
+                        <p class="subtotal-numero">$2300</p>
+                    </div>
+                    <div>
+                        <P class="total">TOTAL</P>
+                        <p class="total-numero">$2300</p>
+                    </div>
                 </div>
                 <button class="finalizar-compra">FINALIZAR COMPRA</button>
             </section>
