hice el html y comence con el css de la pagina de detalle de producto

--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css ">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles-product-detail.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <title>Product</title>
 </head>
 <body>
@@ -67,17 +69,42 @@
     </header>
     <main>
         <section>
-            <article>
+            <article class="support-img">
+                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img">
+                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img">
             </article>
             <article>
-
+                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="main-img" class="main-img">
             </article>
             <article>
-
+                <h3>Nombre del producto</h3>
+                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, obcaecati? Necessitatibus hic magni beatae ullam quasi inventore, labore, harum consectetur quibusdam itaque error quae eaque?</p>
+                <p>$0.00</p>
+                <div>
+                    <form>
+                        <label>Cantidad</label>
+                        <select name="quantity">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+                        <button type="submit">COMPRAR</button>
+                    </form>
+                </div>
             </article>
         </section>
         <section>
-
+            <div>
+                <h3>DESCATADOS / OFERTAS</h3>
+            </div>
+            <div>
+                <img src="img/interior/Screenshot_1.png" alt="img-alt" class="img">
+                <img src="img/interior/Screenshot_9.png" alt="img-alt" class="img">
+                <img src="img/interior/Screenshot_10.png" alt="img-alt" class="img">
+                <img src="img/interior/Screenshot_17.png" alt="img-alt" class="img">
+            </div>
         </section>
     </main>
     <footer>
