--- a/views/products.html
+++ b/views/products.html
@@ -77,7 +77,7 @@
         </section>
         
         <div class="filtros">
-            <p></i>Filtros<i class="fas fa-filter"></i></p>
+            <p></i>Filtros </p> <img src="/img/filter.png" alt="">
         </div>
         
         <section class="buscador">
