mejorando pagina blog

--- a/views/home.html
+++ b/views/home.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="/css/styles.css ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Antonio:wght@700&family=Poppins:wght@300;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
     <title>MALEWO || Home</title>
@@ -26,7 +27,7 @@
                 <i class="fab fa-facebook-square"></i>
             </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
-            <img src="img\logo.jpg" alt="logo">
+                <img src="img\logo.jpg" alt="logo">
             </a>
             <a href="/" style="text-decoration: none;">
                 <h1>CASA MALEWO</h1>
@@ -64,7 +65,7 @@
                         <a href="/info">¿QUIENES SOMOS?</a>
                     </li>
                     <li>
-                        <a href="/blog">BLOG</a>
+                        <a href="blog.html">BLOG</a>
                     </li>
                 </ul>
             </nav>
@@ -85,16 +86,18 @@
             <!-- <article class="a1"> -->
             <article>
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
-            
-            
+
+
 
                 <p class="p1">INTERIOR</p>
             </article>
-            <article><!-- <article class="a2"> -->
+            <article>
+                <!-- <article class="a2"> -->
                 <img src="img\img-home\macetas-de-exterior-de-diseno.jpg" alt="maceta2">
                 <p class="p2">EXTERIOR</p>
             </article>
-            <article><!-- <article class="a3"> -->
+            <article>
+                <!-- <article class="a3"> -->
                 <img src="img\accesorios\Screenshot_15.png" alt="">
                 <p class="p3">ACCESORIOS</p>
             </article>
@@ -105,7 +108,7 @@
 
         <section class="destacados">
             <!-- <h2>DESTACADOS </h2> -->
-            
+
             <article>
                 <img src="img\img-home\Screenshot_20.png" alt="maceta1">
                 <p>INTERIOR</p>
