--- a/views/compras.html
+++ b/views/compras.html
@@ -82,22 +82,25 @@
             <div class="producto">
                 <div class="product-name-icon">
                     <img src="img\productos\8.jpg" alt="">
-                    <p class="nombre-producto">nombre del producto</p>
+                    <div class="titles-box">
+                        <p class="nombre-producto">nombre del producto</p>
+                        <div class="precio-cantidad">
+                            <p>PRECIO UNITARIO</p>
+                            <p class="precioU" style="margin-bottom: 15px;">$1.500</p>
+    
+                            <p>CANTIDAD</p>
+                            <i class="fas fa-minus-circle"></i>
+                            <input type="number" name="quantity[595099420]" data-item-id="595099420" value="1"
+                            class="js-cart-quantity-input cart-item-input form-control">
+                            <i class="fas fa-plus-circle"></i>
+    
+                        </div>
+                    </div>
                     <div class="cross">
                         <i id="cross" class="fas fa-times"></i>
                     </div>
                 </div>
-                <div class="precio-cantidad">
-                    <p>PRECIO UNITARIO</p>
-                    <p class="precioU" style="margin-bottom: 15px;">$1.500</p>
-
-                    <p>CANTIDAD</p>
-                    <i class="fas fa-minus-circle"></i>
-                    <input type="number" name="quantity[595099420]" data-item-id="595099420" value="1"
-                        class="js-cart-quantity-input cart-item-input form-control">
-                    <i class="fas fa-plus-circle"></i>
-
-                </div>
+                
             </div>
             <h2 class="title-line-grey"></h2>
             <section class="shop-box">
