--- a/public/css/styles-quienes-somos.css
+++ b/public/css/styles-quienes-somos.css
@@ -14,12 +14,23 @@ main h1 {
 main p{
     margin-top: 40px;
     text-align: center;
+    padding: 10px 10%;
 
-    width: 60%;
+    width: 100%;
 }
 main img{
     width: 40%;
     margin-top: 50px;
     position: relative;
     bottom: -150px;
+    
+}
+
+@media(min-width:542px){
+    main p {
+        padding: 10px 18%;
+    }
+    main img{
+        width: 20%;
+    }
 }
