--- a/views/compras.html
+++ b/views/compras.html
@@ -81,7 +81,11 @@
         <section class="compra">
             <div class="producto">
                 <div class="product-name-icon">
-                    <img src="img\productos\8.jpg" alt="">
+                    <div class="item-carro">
+                        <img src="img\productos\8.jpg" alt="">
+                        <p>MACETA 1</p>
+                    </div>
+
                     <div class="titles-box">
                         <p class="nombre-producto">nombre del producto</p>
                         <div class="precio-cantidad">
@@ -102,6 +106,7 @@
                 </div>
                 
             </div>
+            
             <h2 class="title-line-grey"></h2>
             <section class="shop-box">
                 <div class="resumen">
