casi terminada pagina blog

--- a/views/blog.html
+++ b/views/blog.html
@@ -73,31 +73,31 @@
         </div>
     </header>
     <main>
-        <section class="articulos-blog">
-            <article class="preguntas">
+        <section class="contenedor-blog">
+            <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_16.png" alt="preguntas frecuentes">
-                <div class="text">
-                    <h3>Preguntas Frecuentes</h3>
-                    <p>Todo los que tenés que saber acerca de nuestros productos</p>
-                    <button>Leé mas +</button>
-                </div>
-            </article>
-            <article class="preguntas">
+
+                <h3 class="texto">Preguntas Frecuentes</h3>
+                <p class="texto">Todo los que tenés que saber acerca de nuestros productos</p>
+                <a href="">Leer mas</a>
+
+            </div>
+            <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_13.png" alt="cuida-plantas">
-                <div class="text">
-                    <h3>Cuida tus plantas</h3>
-                    <p>¿Queres saber como cuidar tus plantas?</p>
-                    <button>Leé mas +</button>
-                </div>
-            </article>
-            <article class="preguntas">
+
+                <h3 class="texto">Cuida tus plantas</h3>
+                <p class="texto">¿Queres saber como cuidar tus plantas?</p>
+                <a href="">Leer mas</a>
+
+            </div>
+            <div class="articulos-blog">
                 <img src="img/img-home/Screenshot_14.png" alt="decora-espacios">
-                <div class="text">
-                    <h3>Decora tus espacio</h3>
-                    <p>Conoce las nuevas tendencias y como decorar tus espacios</p>
-                    <button>Leé mas +</button>
-                </div>
-            </article>
+
+                <h3 class="texto">Decora tus espacio</h3>
+                <p class="texto">Conoce las nuevas tendencias y como decorar tus espacios</p>
+                <a href="">Leer mas</a>
+
+            </div>
         </section>
 
     </main>
