--- a/public/css/styles-blog.css
+++ b/public/css/styles-blog.css
@@ -1,46 +1,41 @@
-/*.articulos-blog{
-    text-align: center;
+.contenedor-blog{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    margin: 10%;
-    
-    
-    
-}*/
-article img {
-    width: 100%;
-    border-top-left-radius:20px; 
-    border-top-right-radius: 20px;
+    margin-top: 100px;
 }
-.articulos-blog article{
-    border: none;
-    background: rgb(243, 243, 243);
-    box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 3);
+.articulos-blog{
+    background: rgb(228, 225, 225);
+    width: 270px;
+    height: 400px;
+    margin: 20px;
     border-radius: 20px;
+    
+}
+.texto{
     text-align: center;
-    width: 90%;
-    margin-top: 50px;
-    transition: transform .3s;
 }
 
-
-.text {
-    padding: 10px , 20px 20px;
+.contenedor-blog img{
+    width: 100%;
+    height: 200px;
+    margin-bottom: 15px;
+    border-radius: 20px 20px 0 0;
 }
-.text button{
-    background: black;
-    border-radius: 20px;
-    border: none;
+ .articulos-blog a{
+    background-color: black;
     color: white;
-    padding: 10px;
-    width: 70%;
-    cursor: pointer;
+    padding: 10px 10px;
+    display: block;
+    text-align: center;
+    margin: 20px 50px;
+    border-radius: 10px;
+    text-decoration: none;
 }
-
-@media (min-width: 460px){
-    .articulos-blog {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+.articulos-blog:hover{
+    background-color: rgb(66, 66, 66);
+    color: white;
+    cursor: pointer;
+    transform: scale(1.03);
+    transform: all 1s ease;
 }
