--- a/views/compras.html
+++ b/views/compras.html
@@ -77,26 +77,33 @@
         <section class="titulo">
             <h2 class="title-line">MI COMPRA </h2>
         </section>
+        <section class="lista-compras">
         <h2 class="title-line-grey"></h2>
         <section class="compra">
             <div class="producto">
                 <div class="product-name-icon">
                     <div class="item-carro">
                         <img src="img\productos\8.jpg" alt="">
-                        <p>MACETA 1</p>
+                        <p>MACETA TRAIDA DEL TIBET</p>
+                        <h4>MACETA TRAIDA DEL TIBET</h4>
                     </div>
+                    
 
                     <div class="titles-box">
-                        <p class="nombre-producto">nombre del producto</p>
+                        
                         <div class="precio-cantidad">
+                            <div class="precio-unitario">
                             <p>PRECIO UNITARIO</p>
                             <p class="precioU" style="margin-bottom: 15px;">$1.500</p>
-    
+                            </div>
+                            <div class="cantidad">
                             <p>CANTIDAD</p>
                             <i class="fas fa-minus-circle"></i>
                             <input type="number" name="quantity[595099420]" data-item-id="595099420" value="1"
                             class="js-cart-quantity-input cart-item-input form-control">
                             <i class="fas fa-plus-circle"></i>
+
+                        </div>
     
                         </div>
                     </div>
@@ -133,6 +140,9 @@
                 </div>
             </section>
         </section>
+        <h2 class="title-line-grey" style="position: relative;bottom: 82px;"></h2>
+
+    </section>
     </main>
 
 
