--- a/public/css/styles-login.css
+++ b/public/css/styles-login.css
@@ -1,7 +1,7 @@
 main {
     display: flex;
     flex-direction: column;
-    margin-top: 30px;
+    margin-top: 103px;
     justify-content: center;
     margin-bottom: 20px;
 }
@@ -62,13 +62,18 @@ button {
 footer {
     margin-top: 250px;
 }
+@media (min-width:534px){
+    main{
+        margin-top: 138px;
+    }
+}
 
 @media (min-width: 1000px) {
     .style-bar1 {
         width: 85%;
     }
     main {
-        margin-top: 55px;
+        margin-top: 135px;
     }
     .form-section {
         width: 55%;
