--- a/views/login.html
+++ b/views/login.html
@@ -78,6 +78,7 @@
                 <label for="password" class="form-item">Contraseña</label>
                 <input type="password" id="password" name="password" class="form-item">
                 <a href="/retrieve-Acount" class="form-item">¿Has olvidado tu contraseña?</a>
+                <a href="/register" class="form-item">Registrarse</a>
                 <button type="submit" class="form-item">Iniciar Sesión</button>
             </form>
         </section>
