--- a/views/product-detail.html
+++ b/views/product-detail.html
@@ -68,38 +68,44 @@
         </div>
     </header>
     <main>
-        <section>
+        <section class="main-section">
             <article class="support-img">
-                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img">
-                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img">
+                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
+                <img src="img/interior/maseta-para-interior-redondas.jpg" alt="support-img" class="support-img-ind">
             </article>
-            <article>
+            <article class="main-img-article">
                 <img src="img/interior/maseta-para-interior-redondas.jpg" alt="main-img" class="main-img">
             </article>
-            <article>
-                <h3>Nombre del producto</h3>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, obcaecati? Necessitatibus hic magni beatae ullam quasi inventore, labore, harum consectetur quibusdam itaque error quae eaque?</p>
-                <p>$0.00</p>
+            <article class="info-buy-article">
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, obcaecati? Necessitatibus hic magni beatae ullam quasi inventore, labore, harum consectetur quibusdam itaque error quae eaque?
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, beatae tempora tenetur eligendi ipsam vel animi. Eum voluptatem nam quae accusamus totam ab natus asperiores, debitis voluptas aspernatur earum praesentium!
+                    </p>
+                    <p class="price">$0.00</p>
+                </div>
                 <div>
                     <form>
-                        <label>Cantidad</label>
-                        <select name="quantity">
-                            <option value="1">1</option>
-                            <option value="2">2</option>
-                            <option value="3">3</option>
-                            <option value="4">4</option>
-                            <option value="5">5</option>
-                        </select>
+                        <div class="quantity">
+                            <label>Cantidad</label>
+                            <select name="quantity">
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
                         <button type="submit">COMPRAR</button>
                     </form>
                 </div>
             </article>
         </section>
-        <section>
+        <section class="secondary-section">
             <div>
-                <h3>DESCATADOS / OFERTAS</h3>
+                <h3 class="offers">Destacados / Ofertas</h3>
             </div>
-            <div>
+            <div class="img-offer">
                 <img src="img/interior/Screenshot_1.png" alt="img-alt" class="img">
                 <img src="img/interior/Screenshot_9.png" alt="img-alt" class="img">
                 <img src="img/interior/Screenshot_10.png" alt="img-alt" class="img">
