--- a/public/css/styles-register.css
+++ b/public/css/styles-register.css
@@ -3,9 +3,6 @@
     margin: 0px;
 }
 
-body {
-    background-color: #F8F8F4;
-}
 li{
     font-family: 'Poppins', sans-serif; 
 }
@@ -258,6 +255,7 @@ footer {
     color: #8B8D8A;
     list-style-type: none;
     padding-left: 5px;
+    font-size: 13px;
 }
 
 .contact-header {
