--- a/public/css/styles-product-detail.css
+++ b/public/css/styles-product-detail.css
@@ -48,7 +48,10 @@ header{
     right: 20px;
     position: absolute;
     top: 0px
-    
+}
+
+.icon-link-header {
+    color: white;
 }
 
 header .header-social-icons i {
@@ -259,6 +262,13 @@ footer {
     justify-content: center
 }
 
+footer section p {
+    color: #8B8D8A;
+    font-size: 11px;
+    margin-top: 5px;
+    margin-left: 14%;
+}
+
 .style-bar2 {
     height: 1px;
     background: black;
@@ -270,6 +280,10 @@ footer {
     align-self: flex-end;
     margin-right: 12%;
     margin-top: 5px;
+}
+
+.icon-link-footer {
+    color: black;
 }
 
 .footer-info {
@@ -379,9 +393,6 @@ footer {
         background-color: white;
         color: black;
         text-align: center;
-    }
-    .img-offer {
-
     }
     .img {
         width: 25%;
