--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,6 +51,10 @@ header .header-social-icons i {
     font-size: 1rem;
 }
 
+.icon-link-header {
+    color: white;
+}
+
 .fa-facebook-square {
     margin-left: 10px;
 }
@@ -314,6 +318,13 @@ footer {
     justify-content: center
 }
 
+footer section p {
+    color: #8B8D8A;
+    font-size: 11px;
+    margin-top: 5px;
+    margin-left: 14%;
+}
+
 .style-bar2 {
     height: 1px;
     background: black;
@@ -325,6 +336,10 @@ footer {
     align-self: flex-end;
     margin-right: 12%;
     margin-top: 5px;
+}
+
+.icon-link-footer {
+    color: black;
 }
 
 .footer-info {
