--- a/views/compras.html
+++ b/views/compras.html
@@ -24,8 +24,8 @@
 
         <div class="top-header">
             <div class="header-social-icons">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-square"></i>
+                <a href="https://www.instagram.com" class="icon-link-header"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com" class="icon-link-header"><i class="fab fa-facebook-square"></i></a>
             </div>
             <a class="logo-img" href="/" style="text-decoration: none;">
                 <img src="img\logo.jpg" alt="logo">
@@ -153,8 +153,8 @@
         </section>
         <section class="footer-icons">
             <div>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-facebook-square"></i>
+                <a href="https://www.instagram.com" class="icon-link-footer"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.facebook.com" class="icon-link-footer"><i class="fab fa-facebook-square"></i></a>
             </div>
         </section>
         <section class="footer-info">
@@ -174,6 +174,9 @@
                     <li><i class="far fa-envelope"> </i> info@casamalewo.com</li>
                 </ul>
             </div>
+        </section>
+        <section>
+            <p>todos los derechos reservados MALEWO® 2021</p>
         </section>
     </footer>
 </body>
